objects/RMA_PRF_CAR_Particulars__c.object
<CustomObject>
    <description>Objects used to store CAR, PRF and Failure Code data associated to the RMA.</description>
    <fields>
        <fullName>Car__c</fullName>
        <label>Car #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Mode__c</fullName>
        <label>Failure Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <label>Lot #</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRF__c</fullName>
        <label>PRF #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA</label>
        <referenceTo>RMA__c</referenceTo>
        <relationshipName>RMA_PRF_CAR_Particulars</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>RMA Particular</label>
    <nameField>
        <displayFormat>RMA Particular-{000000}</displayFormat>
        <label>RMA Particular Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMA Particulars</pluralLabel>
    <recordTypes>
        <fullName>CAR</fullName>
        <active>true</active>
        <label>CAR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Failure_Mode</fullName>
        <active>true</active>
        <label>Failure Mode</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRF</fullName>
        <active>true</active>
        <label>PRF</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>